--- a/Sistema_de_faturamento/pom.xml
+++ b/Sistema_de_faturamento/pom.xml
@@ -4,6 +4,13 @@
     <groupId>com.mycompany.sistema_de_faturamento</groupId>
     <artifactId>Sistema_de_faturamento</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
+        <dependency>
+            <groupId>com.microsoft.sqlserver</groupId>
+            <artifactId>mssql-jdbc</artifactId>
+            <version>6.4.0.jre9</version>
+        </dependency>
+    </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>18</maven.compiler.source>
