--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /Sistema_de_faturamento/target/
 /Sistema_de_Faturamento/nbproject/private/
 /Sistema_de_Faturamento/build/
+/Sistema_de_Faturamento/dist/
