--- a/Sistema_de_Faturamento/nbproject/project.properties
+++ b/Sistema_de_Faturamento/nbproject/project.properties
@@ -1,10 +1,9 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
+annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=Sistema_de_Faturamento
-application.vendor=jacks
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -33,12 +32,12 @@ dist.jar=${dist.dir}/Sistema_de_Faturamento.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Sistema_de_Faturamento
-endorsed.classpath=
 excludes=
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.SQL_Server.classpath}
+    ${libs.SQL_Server.classpath}:\
+    ${libs.SQL_SERVER.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -74,7 +73,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Sistema_de_Faturamento
-main.class=com.mycompany.sistema_de_faturamento.telas.LoginTela
+main.class=sistema_de_faturamento.Sistema_de_Faturamento
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
