--- a/Sistema_de_faturamento/nbproject/project.properties
+++ b/Sistema_de_faturamento/nbproject/project.properties
@@ -28,16 +28,14 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Sistema_de_Faturamento.jar
+dist.jar=${dist.dir}/Sistema_de_faturamento.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/Sistema_de_Faturamento
+dist.jlink.output=${dist.jlink.dir}/Sistema_de_faturamento
 excludes=
 includes=**
 jar.compress=false
-javac.classpath=\
-    ${libs.SQL_Server.classpath}:\
-    ${libs.SQL_SERVER.classpath}
+javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -72,8 +70,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=Sistema_de_Faturamento
-main.class=sistema_de_faturamento.Sistema_de_Faturamento
+jlink.launcher.name=Sistema_de_faturamento
+main.class=sistema_de_faturamento.Sistema_de_faturamento
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
